--- a/style.css
+++ b/style.css
@@ -181,11 +181,13 @@ h1{
 }
 
 .about-img {
-    width: 300px !important;
+    width: 100% !important;
     height: 320px !important;
     border-radius: 10px !important;  /* Applies to container */
     overflow: hidden;                /* Ensures img respects the border-radius */
     display: block;
+    border-radius: 50px !important;  /* Applies rounded corners directly to the image */
+
   }
   
   .about-img img {
@@ -310,12 +312,12 @@ input ,textarea{
   @media only screen and (max-width: 450px) {
     .box-contain{
         width: 90%;
-        min-height: 40vh !important;
+        min-height: 45vh !important;
         background-color: #D9D9D9;
         background: rgba(255, 255, 255, 0.05);
         backdrop-filter: blur(10px);
         border-radius: 15px;
-        padding: 20px;
+        padding: 20px !important;
         box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
         z-index: 10;
     }
@@ -344,6 +346,36 @@ input ,textarea{
       }
       h6{
         font-size: 14px !important;
+      }
+     
+      .about-img {
+        width: 100% !important;
+        height: 220px !important;
+        border-radius: 10px !important;  /* Applies to container */
+        overflow: hidden;                /* Ensures img respects the border-radius */
+        display: block;
+        object-fit: cover;             /* Ensures full image visibility */
+        object-position: center;
+        border-radius: 50px !important;  /* Applies rounded corners directly to the image */
+    
+      }
+      
+      .about-img img {
+        width: 100%;
+        height: 100%;
+        border-radius: 50px !important;  /* Applies rounded corners directly to the image */
+      }
+      h3{
+        font-size: 16px !important;
+      }
+
+      .about-para{
+        font-size: 10px !important;
+      }
+
+      .about-btn{
+        margin-bottom: 10px !important;
+        font-size: 8px !important;
       }
 
   }
