--- a/style.css
+++ b/style.css
@@ -377,4 +377,29 @@ input ,textarea{
         font-size: 8px !important;
       }
 
+      .latest{
+        font-size: 12px !important;
+      }
+      .box span{
+        font-size: 8px !important;
+      }
+
+
+      .box-contain-1{
+        width: 90%;
+        min-height: 40vh;
+        border-radius: 15px;
+        padding: 40px;
+        z-index: 10;
+    }
+    .con-box {
+        background-color: #D9D9D9;
+        background: rgba(255, 255, 255, 0.05);
+        backdrop-filter: blur(10px);
+        border-radius: 10px !important;
+        min-height: 23vh !important;
+    }
+    .portfolio-title{
+       font-size: 12px !important;
+    }
   }
