--- a/style.css
+++ b/style.css
@@ -425,4 +425,37 @@ input ,textarea{
         outline: none !important;
         font-size: 8px !important;
     }
+
+    .menu-content a {
+        display: block;
+        font-size: 20px;
+        color:#D9D9D9;
+        text-decoration: none;
+        margin: 20px 0;
+        transition: 0.3s;
+      }
+
+
+      .contain-popup {
+        width: 90% !important;
+        min-height: 50vh !important;
+        background-color: #D9D9D9;
+        background: rgba(0, 0, 0, 0.3);
+        backdrop-filter: blur(15px);
+        border-radius: 10px !important;
+    }
+
+    
+    .popup-text {
+        font-size: 8px !important;
+        text-align: justify !important;
+        color: #ffff !important;
+    }
+
+  
+
+    ul li {
+        color: #D9D9D9 !important;
+        font-size:8px !important;
+    }
   }
