--- a/style.css
+++ b/style.css
@@ -458,4 +458,7 @@ input ,textarea{
         color: #D9D9D9 !important;
         font-size:8px !important;
     }
+    .btn1{
+        font-size: 10px !important;
+    }
   }
