--- a/style.css
+++ b/style.css
@@ -374,7 +374,8 @@ input ,textarea{
       }
 
       .about-btn{
-        font-size: 8px !important;
+        font-size: 6px !important;
+        padding: 4px !important;
       }
 
       .latest{
